; ModuleID = '/home/carl/AnghaBench/mpv/video/out/extr_vo_null.c_control.c'
source_filename = "/home/carl/AnghaBench/mpv/video/out/extr_vo_null.c_control.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vo = type { %struct.priv* }
%struct.priv = type { double }

@VO_TRUE = common dso_local global i32 0, align 4
@VO_NOTIMPL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.vo*, i32, i8*)* @control to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @control(%struct.vo* %0, i32 %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.vo*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca %struct.priv*, align 8
  store %struct.vo* %0, %struct.vo** %5, align 8
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  %9 = load %struct.vo*, %struct.vo** %5, align 8
  %10 = getelementptr inbounds %struct.vo, %struct.vo* %9, i32 0, i32 0
  %11 = load %struct.priv*, %struct.priv** %10, align 8
  store %struct.priv* %11, %struct.priv** %8, align 8
  %12 = load i32, i32* %6, align 4
  switch i32 %12, label %26 [
    i32 128, label %13
  ]

13:                                               ; preds = %3
  %14 = load %struct.priv*, %struct.priv** %8, align 8
  %15 = getelementptr inbounds %struct.priv, %struct.priv* %14, i32 0, i32 0
  %16 = load double, double* %15, align 8
  %17 = fcmp une double %16, 0.000000e+00
  br i1 %17, label %19, label %18

18:                                               ; preds = %13
  br label %26

19:                                               ; preds = %13
  %20 = load %struct.priv*, %struct.priv** %8, align 8
  %21 = getelementptr inbounds %struct.priv, %struct.priv* %20, i32 0, i32 0
  %22 = load double, double* %21, align 8
  %23 = load i8*, i8** %7, align 8
  %24 = bitcast i8* %23 to double*
  store double %22, double* %24, align 8
  %25 = load i32, i32* @VO_TRUE, align 4
  store i32 %25, i32* %4, align 4
  br label %28

26:                                               ; preds = %3, %18
  %27 = load i32, i32* @VO_NOTIMPL, align 4
  store i32 %27, i32* %4, align 4
  br label %28

28:                                               ; preds = %26, %19
  %29 = load i32, i32* %4, align 4
  ret i32 %29
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
